tenzir/bats/data/reference/pipelines_local/test_parse_operators/step_14.ref
error: loader for `scheme` scheme could not be found
 --> <input>:1:6
  |
1 | from scheme://foo.json read json
  |      ^^^^^^ 
  |
  = hint: must be one of -, file, stdin, tcp
  = docs: https://docs.tenzir.com/connectors